--- a/sections/collection-template.liquid
+++ b/sections/collection-template.liquid
@@ -1,3 +1,5 @@
+<link rel="stylesheet" href="{{ 'collection.css' | asset_url }}">
+
 <section class="collection-page">
     <header class="collection-header">
       <h1>{{ collection.title }}</h1>
